# kosa

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: tests.yaml
benches/: delete.rs  read.rs  write.rs
src/: bitmap.rs  lib.rs
src/bitmap/: mod.rs  simd.rs
