[package]
name = "frozen_grave"
version = "0.0.1"
edition = "2024"
description = "A page based storage engine w/ fire-and-forget writes and crash-safe durability semantics"
keywords = [
    "rta",
    "database",
    "persistence",
    "storage",
]
categories = [
    "caching",
    "database-implementations",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/frozen-lab/frozen_grave"
exclude = ["shell.nix"]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["aarch64-unknown-linux-gnu", "aarch64-apple-darwin"]
additional-targets = ["i686-apple-darwin"]

[dependencies.frozen-core]
version = "0.0.18"
default-features = false
features = [
    "crc32",
    "fmmap",
    "ffile",
]

[dev-dependencies]
tempfile = "3.20.0"

[profile.release]
codegen-units = 1
lto = "fat"
incremental = false
opt-level = 3

[profile.bench]
codegen-units = 1
lto = "fat"
incremental = false
opt-level = 3
debug = true
debug-assertions = false
strip = false

[profile.profile]
inherits = "release"
debug = true
lto = "off"
opt-level = 2
codegen-units = 1
debug-assertions = false
overflow-checks = false
strip = "none"
