[package]
name = "kosa"
version = "0.0.2"
edition = "2024"
rust-version = "1.86.0"
description = "Kośa is a reliable page-based storage engine w/ fire-and-forget durability semantics"
keywords = [
    "database",
    "persistence",
    "storage",
]
categories = [
    "caching",
    "database-implementations",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/frozen-lab/frozen_grave"
exclude = [
    ".github/",
    "shell.nix",
    "SECURITY.md",
    "CONTRIBUTING.md",
    "CODE_OF_CONDUCT.md",
]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["aarch64-unknown-linux-gnu", "aarch64-apple-darwin"]
additional-targets = ["i686-apple-darwin"]

[dependencies.frozen-core]
version = "0.0.32"
default-features = false
features = [
    "crc32",
    "fmmap",
    "ffile",
    "hints",
    "wpipe",
]

[dev-dependencies.tempfile]
version = "3.20.0"

[dev-dependencies.hdrhistogram]
version = "7.5.4"

[profile.release]
codegen-units = 1
lto = "fat"
incremental = false
opt-level = 3

[profile.bench]
codegen-units = 1
lto = "fat"
incremental = false
opt-level = 3
debug = true
debug-assertions = false
strip = false

[profile.profile]
inherits = "release"
debug = true
lto = "off"
opt-level = 2
codegen-units = 1
debug-assertions = false
overflow-checks = false
strip = "none"

[[bench]]
name = "write"
harness = false

[[bench]]
name = "read"
harness = false

[[bench]]
name = "delete"
harness = false
